language/move-lang/tests/move_check/typing/loop_body_invalid.exp
error: 

   ┌── tests/move_check/typing/loop_body_invalid.move:3:14 ───
   │
 3 │         loop 0
   │              - The type: integer
   │              - Is not compatible with: '()'
   │              ^ Invalid loop body
   │

error: 

   ┌── tests/move_check/typing/loop_body_invalid.move:7:14 ───
   │
 7 │         loop false
   │              ----- The type: 'bool'
   │              ----- Is not compatible with: '()'
   │              ^^^^^ Invalid loop body
   │

error: 

    ┌── tests/move_check/typing/loop_body_invalid.move:11:14 ───
    │
 11 │         loop { 0x0 }
    │              ------- Is not compatible with: '()'
    │              ^^^^^^^ Invalid loop body
    │                --- The type: 'address'
    │

error: 

    ┌── tests/move_check/typing/loop_body_invalid.move:15:14 ───
    │
 15 │         loop { let x = 0; x }
    │              ---------------- Is not compatible with: '()'
    │              ^^^^^^^^^^^^^^^^ Invalid loop body
    │                    - The type: integer
    │

error: 

    ┌── tests/move_check/typing/loop_body_invalid.move:19:14 ───
    │
 19 │         loop { if (true) 1 else 0 }
    │              ---------------------- Is not compatible with: '()'
    │              ^^^^^^^^^^^^^^^^^^^^^^ Invalid loop body
    │                                 - The type: integer
    │

